syntax = "proto3";

package comms;

//import "google/protobuf/any.proto";

message WorkOrder {
	uint32 x = 1;
	uint32 y = 2;
	uint32 width = 3;
	uint32 height = 4;
	uint32 screenWidth = 5;
	uint32 screenHeight = 6;
	bytes state = 7;
	//repeated google.protobuf.Any updates = 8;
}

message TraceResults {
	message Colour {
		uint32 r = 1;
		uint32 g = 2;
		uint32 b = 3;
	}
	repeated Colour results = 1;
}

service Trace {
	rpc BulkTrace(WorkOrder) returns (TraceResults);
}